# ml-copilot-agent

./: .gitignore  .readthedocs.yaml  LICENSE  NOTICE.md  README.md  mkdocs.yml  new_license  package-lock.json  pyproject.toml  requirements.py
.ipynb_checkpoints/: mkdocs-checkpoint.yml
data/: generate_data.py  synthetic_clinical.csv  synthetic_methylation.csv  synthetic_mutations.csv
docs/: configuration.md  faq.md  index.md  installation.md  introduction.md  license.md  overview.md  requirements.txt
docs/.ipynb_checkpoints/: contributing-checkpoint.md  index-checkpoint.md  installation-checkpoint.md  overview-checkpoint.md  requirements-checkpoint.txt
docs/features/: custom_instructions.md  evaluation.md  plotting.md  preprocessing.md  training.md
docs/usage/: command.md  overview.md
frontend/: .gitingnore  package-lock.json  postcss.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css  main.jsx  package.json  tailwind.config.js  vite.config.js
ml_copilot_agent/: __init__.py  __main__.py  api_server.py  config.py  llm_manager.py  log_manager.py  memory_manager.py  project_manager.py  rag_manager.py  tools.py  workflow.py  workflow2.py  workflow3.py  workflow_logic.py.py
